--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <p>📍 Soklat, Subang, Jawa Barat</p>
         </div>
         <footer>
-            <a href="contact.html">Contact Me</a>
+            <a href="contact.html">Contact Me Tegar</a>
         </footer>
     </div>
 </body>
